--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "reflect-metadata": "^0.2.2"
   }
 }
